fix: serve image sitemap correctly on vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/index.html"
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/sitemap_images.xml",
+      "dest": "/sitemap_images.xml",
+      "headers": {
+        "Content-Type": "application/xml"
       }
-    ]
-  }
+    }
+  ]
+}
