--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
   "routes": [
     {
       "src": "/sitemap_images.xml",
@@ -12,6 +6,10 @@
       "headers": {
         "Content-Type": "application/xml"
       }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
