--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
-  "routes": [
-    {
-      "src": "/sitemap_images.xml",
-      "dest": "/sitemap_images.xml",
-      "headers": {
-        "Content-Type": "application/xml"
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
       }
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
-}
+    ]
+  }
